<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="381dp"
            android:layout_height="279dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/personal_avatar"
            android:src="@drawable/line_album___220820_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_lai"
            style="@style/text_content"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/yuchen_lai"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_eva"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_eva"
            style="@style/text_content"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/eva"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name_title" />

        <TextView
            android:id="@+id/Name_title"
            style="@style/title"
            android:layout_width="165dp"
            android:layout_marginStart="24dp"
            android:text="@string/name_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/Nickname_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Nickname_title"
            style="@style/title"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/nickname_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/aboutMe"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/about_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_eva" />

        <TextView
            android:id="@+id/self_intro"
            style="@style/text_content"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/self_introduction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMe"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>